# schwab-api

./: .gitignore  LICENSE  README.md  check.sh  pyproject.toml  schwab-api-lib.md
docs/: schwab-api.md
examples/: portfolio_overview.py  quantitative_analysis.py  remote_auth_telegram.py  trading_strategies.py
schwab_api/: __init__.py  account_manager.py  auth.py  client.py  exceptions.py  math.py  stream.py  stream_parsers.py  tokens.py  trading.py  utils.py
schwab_api/orders/: __init__.py  common.py  equities.py  generic.py  options.py
schwab_api/ws_clients/: __init__.py
tests/: e2e_account_manager.py  e2e_data_frames.py  e2e_orders.py  e2e_read_only.py  e2e_stream.py  e2e_vix.py  test_account_manager.py  test_api_requests.py  test_date_parsing.py  test_e2e_option_chain_math.py  test_math.py  test_orders.py  test_stream_parsers.py  test_trading_gex.py  test_trading_utils.py  test_utils_e2e.py  test_vix.py
